keep url-query to a single line

--- a/io.gdevs.GDLauncher.yml
+++ b/io.gdevs.GDLauncher.yml
@@ -41,8 +41,8 @@ modules:
           type: json
           url: https://api.github.com/repos/gorilla-devs/GDLauncher/releases/latest
           version-query: .tag_name | sub("^[vV]"; "")
-          url-query: .assets[] | select(.name=="GDLauncher-linux-setup.AppImage")
-            | .browser_download_url
+          url-query: |
+            .assets[] | select(.name=="GDLauncher-linux-setup.AppImage") | .browser_download_url
       - type: file
         path: io.gdevs.GDLauncher.desktop
       - type: file
